// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Speaker /> handles some props for testing !! matches snapshot 1`] = `
Array [
  <button>
    Speak
  </button>,
  <div>
    
  </div>,
]
`;

exports[`<Speaker /> handles some props for testing !! matches snapshot with different props 1`] = `
Array [
  <button>
    Speak
  </button>,
  <div>
    hello AGAIN Prop
  </div>,
]
`;

exports[`<Speaker /> handles some props for testing !! matches snapshot with props 1`] = `
Array [
  <button>
    Speak
  </button>,
  <div>
    hello Prop
  </div>,
]
`;
